# near-coin-flip

./: Cargo.toml
src/: lib.rs
tests/: tests.rs
